<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#212121">

        <EditText
            android:id="@+id/et_search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_16"
            android:autofillHints="@string/user_name"
            android:background="@drawable/search_background"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/dp_16"
            android:textColor="#212121"
            android:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/et_search_bar"
            android:background="#212121"
            android:visibility="gone">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_24"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/civ_profile_picture"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:layout_marginTop="36dp"
                android:contentDescription="@string/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_name" />

            <TextView
                android:id="@+id/tv_user_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:text="@string/company"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/civ_profile_picture" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_4"
                android:drawablePadding="@dimen/dp_8"
                android:text="@string/user_name"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_baseline_person_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_user_full_name" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:drawablePadding="@dimen/dp_8"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_username"
                tools:text="@string/location" />

            <TextView
                android:id="@+id/tv_profile_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_4"
                android:drawablePadding="@dimen/dp_8"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_baseline_link_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_location"
                tools:text="@string/profile" />

            <TextView
                android:id="@+id/tv_repo_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_4"
                android:drawablePadding="@dimen/dp_8"
                android:text="@string/public_repositories"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_git_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_url" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/dp_8"
                android:background="#A9A9A9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_repo_count">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_repo_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/repo_view_item" />

                <TextView
                    android:id="@+id/empty_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/no_repo_found"
                    android:textSize="@dimen/sp_24"
                    app:drawableTopCompat="@drawable/ic_baseline_cancel_24" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</layout>